Adihu : IE Double Scroller Fixed
git-svn-id: https://10.24.239.14:5511/svn/Engage@1073 f308e16d-57e9-4fa7-a310-9aba3baf408f

--- a/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
+++ b/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
@@ -1,3 +1,8 @@
+/*IE Double Scroller Fixed*/
+.p_AFMaximized.af_document{
+    position: inherit !important;
+}
+
 /*Remove Wrapping on Dropdowns*/
 .af_inputText.AFNoWrapMarker .af_inputText_label, .af_inputListOfValues.AFNoWrapMarker .af_inputListOfValues_label, .af_inputComboboxListOfValues.AFNoWrapMarker .af_inputComboboxListOfValues_label, .af_selectOneChoice.AFNoWrapMarker .af_selectOneChoice_label, .af_inputDate, .af_menu_child-container .af_menu_detachable-header, .af_selectManyChoice, .nowrap *, .af_inputListOfValues, .af_inputComboboxListOfValues, .NoLabelWrap .af_quickQuery_label, .NoLabelWrap .af_selectBooleanCheckbox_label, .NoLabelWrap .af_selectOneChoice_label, .NoLabelWrap .af_inputText_label, .NoLabelWrap .af_inputDate_label, .NoLabelWrap .af_panelLabelAndMessage_label, .af_commandLink.WCSearchResultsPrevNextLink {
 white-space: normal;
@@ -548,7 +553,7 @@ body {
     width: 962px;
    
 }
-/*@platform windows, linux, solaris{
+@platform windows, linux, solaris{
             .marginIEHeader{
                 margin-bottom:15px;
                             }
@@ -557,6 +562,7 @@ body {
         margin-left:7px;
         
     }
+}
 
 
 /*Dialog Box starts*/
